[package]
name = "inventory_billing_system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "1.0.0-beta.12", features = ["http"] }
lettre = { version = "0.11.15",features = [
    "tokio1-native-tls",
    "smtp-transport",
    "builder"
] }
dotenv = "0.15"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.12"
once_cell = "1.17"
rand = "0.8"
